# pytorch-transform-illustrations

./: 0_🏠_Transforms_Illustrated.py  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: utils.py
app/pages/: 1_📐_Geometric_Transforms.py
app/transforms/: augmentation_transforms.py
pages/: 2_🌄_Photometric_Transforms.py  3_🧠_Augmentation_Transforms.py
transforms/: geometric_transforms.py  photometric_transforms.py
